# mdify

./: Cargo.toml  LICENSE  README.md
src/: autoinclude.html  main.rs
