[package]
name = "mdify"
version = "0.4.1"
authors = ["Leonardo Forchini <git@lforchini.com>"]
edition = "2021"
license = "MIT"

readme = "README.md"
description = "A CLI tool that translates md files to html while keeping project structure"
repository = "https://github.com/LForchini/mdify.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }
comrak = "0.18.0"
glob = "0.3.1"
pathdiff = "0.2.1"
regex = "1.9.6"
